# catkin_ws

./: README.md
devel/: .catkin  setup.fish  setup.sh
devel/include/regulated_pure_pursuit_controller/: RegulatedPurePursuitControllerConfig.h
devel/lib/formula_mini_tutorials/: L2_1_02_sub_chatter_spin.py  L2_1_03_sub_chatter_no_spin.py  L2_2_01_ackermann_action.py  L2_2_03_ackermann_left_stop.py  L2_3_02_scan_front_threshold.py  L2_4_01_reactive_stop.py  L2_4_03_reactive_avoid_lr.py  L3_1_01_scan_5sectors_filter.py  L3_3_01_follow_the_gap.py  L3_4_01_disparity_extender.py  L5_1_02_odom_observer.py  L6_4_01_pure_pursuit.py  L6_4_02_l1_controller.py  L6_4_04_waypoint_dispatcher.py
src/formula_mini_tutorials/: CMakeLists.txt  README.md
src/formula_mini_tutorials/config/: pure_pursuit.rviz  regulated_pure_pursuit_params.yaml  scan_config.rviz  tianbot.lua
src/formula_mini_tutorials/docs/: vibe_coding_example.md
src/formula_mini_tutorials/launch/: L2_1_pubsub_demo.launch  L5_2_cartographer.launch  L6_1_map_load.launch  L6_4_l1_nav.launch  L6_4_pure_pursuit_nav.launch  L6_4_view_rviz.launch
src/formula_mini_tutorials/scripts/: L2_1_01_pub_chatter.py  L2_1_02_sub_chatter_spin.py  L2_2_01_ackermann_action.py  L2_2_03_ackermann_left_stop.py  L2_4_02_reactive_follow.py  L3_3_01_follow_the_gap.py  L3_4_01_disparity_extender.py  L5_1_01_imu_observer.py  L5_1_02_odom_observer.py  L6_4_02_l1_controller.py  L6_4_03_waypoint_recorder.py  L6_4_04_waypoint_dispatcher.py  data.csv  launch.sh
src/formula_mini_tutorials/src/: L1_controller_v2.cpp
(+57 files in other folders)
